[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["andreaoliveira9 <andreaoliveira@ua.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
pika = "^1.3.2"
pyjwt = "^2.8.0"
loguru = "^0.7.2"
SQLAlchemy = "^2.0.29"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
python-jose = "^3.3.0"
httpx = "^0.27.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.29.0"
pytest = "^8.2.0"
tox = "^4.15.0"
coverage = "^7.5.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
